# perf-oriented-dev

./: .gitignore  .gitmodules
exercises/sheet01/: benchmark.sh  gen_markdown.py  sheet01_beiser_poc.md
exercises/sheet01/results_lcc3/: delannoy_10.json  delannoy_11.json  delannoy_12.json  delannoy_13.json  delannoy_14.json  filegen_100000_1_1.json  filegen_10000_1_1.json  filegen_1000_1_1.json  filegen_1_10000_1.json  filegen_1_1000_1.json  filegen_1_1_1000.json  filegen_1_1_10000.json  filegen_1_1_100000.json  filegen_1_1_20000.json  filegen_1_20000_1.json  filegen_20000_1_1.json  filesearch.json  job_delannoy.sh  job_filesearch.sh  job_mmul.sh  job_nbody.sh  job_qap.sh  mmul.json  nbody.json  qap_chr10a.json  qap_chr12a.json  qap_chr12b.json  qap_chr12c.json  (+3 more)
exercises/sheet02/: CMakeLists.txt  benchmark.py  generate_plot_and_tables.py  sheet02_beiser_poc.md
exercises/sheet03/: analysis_a.txt  analysis_a_lcc3.txt  analysis_b.txt  analysis_b_lcc3.txt  analysis_s.txt  analysis_s_lcc3.txt  sheet03_beiser_poc.md
exercises/sheet04/: job_massif.sh  job_perf.sh  massif.out.2474610  massif.out.npb_bt_s  massif.out.ssca2  sheet04_beiser_poc.md
exercises/sheet05/: sheet05_beiser_poc.md
exercises/sheet06/: benchmark.py  generate_csv.py  output.csv  sheet06_beiser_poc.md
exercises/sheet07/: malloctest_arena.c  sheet07_beiser_poc.md
exercises/sheet09/: DataStructureOutput.csv  sheet09_beiser_poc.md
larger_samples/npb_bt/: CMakeLists.txt
larger_samples/npb_bt/src/: x_solve.c
small_samples/: CMakeLists.txt
small_samples/mmul_t/: mmul_t.c
tools/: CMakeLists.txt
(+217 files in other folders)
